--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+/* ElegPage */
+/* https://ioioi.lol */
+/* https://github.com/Acornia-OWQ/ElegPage */
+/* Copyright(c) 2025 Acornia - OWQ < hi@kisou.cn> */
+/* 自由使用、修改、分发，禁止售卖 ，商业使用说明：企业或组织将本软件用于内部运营、免费服务或非销售类产品，完整协议：<LICENSE> 。 */
+/* 本代码按“原样”提供，作者不承担任何责任。 */
+
 /* 基础设置 */
 
 * {
